--- a/src/index.html
+++ b/src/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
     />
     <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,500&display=swap"
       rel="stylesheet"
     />
     <meta
@@ -78,7 +78,7 @@
           <li class="nav__item">
             <a
               class="nav__link"
-              href="#laptops&computers"
+              href="#laptops&amp;computers"
               data-qa="hover"
             >
               Laptops&nbsp;&&nbsp;Computers
