--- a/src/index.html
+++ b/src/index.html
@@ -37,11 +37,9 @@
   </head>
   <body>
     <header class="header">
-      <a
-        href="#"
-        class="logo"
-      >
+      <a href="#">
         <img
+          class="logo"
           src="images/logo.png"
           alt="Logo Moyo"
         />
@@ -78,10 +76,10 @@
           <li class="nav__item">
             <a
               class="nav__link"
-              href="#laptops&amp;computers"
+              href="#laptops&computers"
               data-qa="hover"
             >
-              Laptops&nbsp;&&nbsp;Computers
+              Laptops & Computers
             </a>
           </li>
 
